[gd_scene load_steps=10 format=3 uid="uid://dgxn2rf8eixp0"]

[ext_resource type="Script" path="res://scripts/PlayerUI.gd" id="1_fuw4u"]
[ext_resource type="Texture2D" uid="uid://d1oxuhdmjmaru" path="res://assets/UI/HPbarOutlineUI-export.png" id="2_gtpdc"]
[ext_resource type="Texture2D" uid="uid://k54iv76t63gf" path="res://assets/UI/HPUI-export.png" id="3_gowkc"]
[ext_resource type="Texture2D" uid="uid://d3b4ixbawf7qp" path="res://assets/UI/MPbarOutlineUI-export.png" id="4_6w00u"]
[ext_resource type="Texture2D" uid="uid://bmyhhr3ru2qgd" path="res://assets/UI/MPUI-export.png" id="5_bxqa4"]
[ext_resource type="Texture2D" uid="uid://044e7wakyac0" path="res://assets/UI/HeadOutlineUI.png" id="6_pjwbu"]
[ext_resource type="Texture2D" uid="uid://i72kq06olvkc" path="res://assets/UI/HeadUI-export.png" id="7_7h287"]
[ext_resource type="Texture2D" uid="uid://c56bkc506egmt" path="res://assets/UI/FaceUI-export.png" id="8_0g4py"]
[ext_resource type="Texture2D" uid="uid://dxhrrokigtq5b" path="res://assets/UI/FaceHitUI-export.png" id="9_05xg0"]

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_fuw4u")

[node name="DamagedTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerStatus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 108.0
offset_bottom = 28.0
scale = Vector2(1.8, 1.8)

[node name="HP" type="Control" parent="PlayerStatus"]
layout_mode = 3
anchors_preset = 0
offset_left = 19.0
offset_top = 2.0
offset_right = 98.0
offset_bottom = 14.0

[node name="HP_Plate" type="TextureRect" parent="PlayerStatus/HP"]
layout_mode = 0
offset_right = 79.0
offset_bottom = 12.0
texture = ExtResource("2_gtpdc")
expand_mode = 2

[node name="HP_Bar_BG" type="TextureRect" parent="PlayerStatus/HP"]
self_modulate = Color(0.784314, 0.784314, 0.784314, 1)
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 73.0
offset_bottom = 8.0
texture = ExtResource("3_gowkc")
stretch_mode = 1

[node name="HP_Bar" type="TextureRect" parent="PlayerStatus/HP"]
self_modulate = Color(0.901961, 0.223529, 0.27451, 1)
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 73.0
offset_bottom = 8.0
texture = ExtResource("3_gowkc")
expand_mode = 1
stretch_mode = 1

[node name="MP" type="Control" parent="PlayerStatus"]
layout_mode = 3
anchors_preset = 0
offset_left = 14.0
offset_top = 12.0
offset_right = 83.0
offset_bottom = 18.0

[node name="MP_Plate" type="TextureRect" parent="PlayerStatus/MP"]
layout_mode = 0
offset_right = 71.0
offset_bottom = 6.0
texture = ExtResource("4_6w00u")
expand_mode = 3

[node name="MP_Bar_BG" type="TextureRect" parent="PlayerStatus/MP"]
self_modulate = Color(0.784314, 0.784314, 0.784314, 1)
layout_mode = 0
offset_left = 5.0
offset_right = 65.0
offset_bottom = 3.0
texture = ExtResource("5_bxqa4")
stretch_mode = 1

[node name="MP_Bar" type="TextureRect" parent="PlayerStatus/MP"]
self_modulate = Color(0.2, 0.462745, 0.741176, 1)
layout_mode = 0
offset_left = 5.0
offset_right = 65.0
offset_bottom = 3.0
texture = ExtResource("5_bxqa4")
expand_mode = 1
stretch_mode = 1

[node name="Face" type="Control" parent="PlayerStatus"]
layout_mode = 3
anchors_preset = 0
offset_right = 21.0
offset_bottom = 16.0

[node name="Face_Plate" type="TextureRect" parent="PlayerStatus/Face"]
layout_mode = 0
offset_right = 21.0
offset_bottom = 16.0
texture = ExtResource("6_pjwbu")
stretch_mode = 4

[node name="Face_BG" type="TextureRect" parent="PlayerStatus/Face"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 19.0
offset_bottom = 16.0
texture = ExtResource("7_7h287")
stretch_mode = 4

[node name="Face_Normal" type="TextureRect" parent="PlayerStatus/Face"]
layout_mode = 0
offset_left = 10.6667
offset_top = 6.0
offset_right = 16.6667
offset_bottom = 12.0
texture = ExtResource("8_0g4py")
stretch_mode = 4

[node name="Face_Damaged" type="TextureRect" parent="PlayerStatus/Face"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 18.0
offset_bottom = 13.0
texture = ExtResource("9_05xg0")
stretch_mode = 4

[connection signal="timeout" from="DamagedTimer" to="." method="_on_damaged_timer_timeout"]
